# anshi-learning-lab

./: .gitignore  总结项目修改记录.md
05_ai_production_system/10_learning_problem_library_factory/: .env.example  .gitignore  README.md  pyproject.toml
05_ai_production_system/10_learning_problem_library_factory/data/: official_curriculum_sources.json  retrieval_gold_cases.json
05_ai_production_system/10_learning_problem_library_factory/docs/: architecture.md  codex-ai-conditional-approval-2026-07-02.md  core-thinking-production-2026-07-01.md  curriculum-knowledge-pipeline.md  design-correction-v1.1.md  full-production-status-2026-07-02.md  material-retrieval-v1.md  p3-run-2026-06-30.md  psychology-production-2026-07-02.md
05_ai_production_system/10_learning_problem_library_factory/examples/: curriculum_pipeline_request.example.json  curriculum_providers.example.json  learning_psychology_request.example.json  math_core_thinking_request.example.json  math_linear_equation_request.example.json  math_linear_equation_source_grounded_request.example.json  providers.example.json
05_ai_production_system/10_learning_problem_library_factory/scripts/: build_ai_reviewed_bundles.py  build_core_thinking_bundle.py  build_core_thinking_requests.py  build_material_index.py  build_psychology_bundle.py  build_psychology_request.py  evaluate_material_retrieval.py  ocr_curriculum_pdfs.ps1  query_material_index.py
05_ai_production_system/10_learning_problem_library_factory/tests/: conftest.py  test_compiler.py  test_curriculum_citation_repair.py  test_curriculum_pipeline.py  test_embeddings.py  (+6 more)
(+103 files in other folders)
